# packet

./: .gitignore  Cargo.toml  README.md
examples/: parser.rs  print-arp.rs  read-udp.rs  send-arp.rs  send-udp.rs  simd-classify.rs  sniffer.rs  udp-echo-server.rs
examples/parser/: Cargo.toml
examples/parser/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: eth.rs  ipv4.rs  tcp.rs
resources/: enet-arp-reply.json  enet-ipv4-tcp.json  enet-ipv4.json
src/: arp.rs  checksum.rs  enet.rs  ethernet.rs  icmp.rs  ipv4.rs  lib.rs  tcp.rs  udp.rs
tests/: framing.rs
