[package]
name = "packet-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.packet]
path = ".."

[[bin]]
name = "eth"
path = "fuzz_targets/eth.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ipv4"
path = "fuzz_targets/ipv4.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tcp"
path = "fuzz_targets/tcp.rs"
test = false
doc = false
bench = false